--- a/axis/axis-internet.html
+++ b/axis/axis-internet.html
@@ -1,162 +1,147 @@
 <html>
+
 <head>
-	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title>Indo Pulsa | Axis Internet</title>
+  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <title>Indo Pulsa | Axis Internet</title>
 </head>
-<div class="navbar">
-	<a href="../index.html">Home</a>
-	<a href="#../axis/axis-internet.html">Axis</a>
-	<div class="subnav">
-		<button class="subnavbtn">Indosat <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../indosat/indosat-internet.html">Paket Internet</a>
-			<a href="../indosat/indosat-sms.html">Paket SMS</a>
-			<a href="../indosat/indosat-telepon.html">Paket Telepon</a>
 
-		</div>
-	</div>
-		<a href="../smartfren/smartfren-internet.html">Smartfren</a>
-	<div class="subnav">
-		<button class="subnavbtn">Telkomsel <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../telkomsel/telkomsel-internet.html">Paket Internet</a>
-			<a href="../telkomsel/telkomsel-sms.html">Paket SMS</a>
-			<a href="../telkomsel/telkomsel-telepon.html">Paket Telepon</a>
-		</div>
-	</div>
-	<div class="subnav">
-		<button class="subnavbtn">Three <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../three/three-internet.html">Paket Internet</a>
-			<a href="../three/three-sms.html">Paket SMS</a>
-		</div>
-	</div>
-	<div class="subnav">
-		<button class="subnavbtn">XL <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../xl/xl-internet.html">Paket Internet</a>
-			<a href="../xl/xl-telepon.html">Paket Telepon</a>
-		</div>
-	</div>
-</div>
-<h1><span class="white">&lt;</span>Indo<span class="white">&gt;</span> <span class="white">Pulsa</pan></h1>
+<body>
+  <div class="navbar">
+    <a href="../index.html">Home</a>
+    <a href="#">Axis</a>
+    <div class="subnav">
+      <button class="subnavbtn">
+        Indosat <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="subnav-content">
+        <a href="../indosat/indosat-internet.html">Paket Internet</a>
+        <a href="../indosat/indosat-sms.html">Paket SMS</a>
+        <a href="../indosat/indosat-telepon.html">Paket Telepon</a>
+      </div>
+    </div>
+    <a href="../smartfren/smartfren-internet.html">Smartfren</a>
+    <div class="subnav">
+      <button class="subnavbtn">
+        Telkomsel <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="subnav-content">
+        <a href="../telkomsel/telkomsel-internet.html">Paket Internet</a>
+        <a href="../telkomsel/telkomsel-sms.html">Paket SMS</a>
+        <a href="../telkomsel/telkomsel-telepon.html">Paket Telepon</a>
+      </div>
+    </div>
+        <a href="../three/three-internet.html">Three</a>
+    <div class="subnav">
+      <button class="subnavbtn">XL <i class="fa fa-caret-down"></i></button>
+      <div class="subnav-content">
+        <a href="../xl/xl-internet.html">Paket Internet</a>
+        <a href="../xl/xl-telepon.html">Paket Telepon</a>
+      </div>
+    </div>
+  </div>
+  <h1>
+    <span class="white">&lt;</span>Indo<span class="white">&gt;</span>
+    <span class="white">Pulsa</span>
+  </h1>
 
-<table class="container">
-	<thead>
-		<tr>
-			<th>
-				<h1>No</h1>
-			</th>
-			<th>
-				<h1>Kode Produk</h1>
-			</th>
-			<th>
-				<h1>Keterangan Produk</h1>
-			</th>
-			<th>
-				<h1>Harga Produk</h1>
-			</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>1</td>
-			<td>ADB1</td>
-			<td>Bronet 1GB 30 hari</td>
-			<td>Rp 19.600</td>
-		</tr>
-		<tr>
-			<td>2</td>
-			<td>ADB2</td>
-			<td>Bronet 2GB 30 hari</td>
-			<td>Rp. 28.200</td>
-		</tr>
-		<tr>
-			<td>3</td>
-			<td>ADB3</td>
-			<td>Bronet 3GB 30 hari</td>
-			<td>Rp. 37.200</td>
-		</tr>
-		<tr>
-			<td>4</td>
-			<td>ADB5</td>
-			<td>Bronet 5GB 30 hari</td>
-			<td>Rp. 55.200</td>
-		</tr>
-		<tr>
-			<td>5</td>
-			<td>ADB7H</td>
-			<td>Bronet 300MB 7 hari</td>
-			<td>Rp. 10.200</td>
-		</tr>
-		<tr>
-			<td>6</td>
-			<td>ADB8</td>
-			<td>Bronet 8GB 30 hari</td>
-			<td>Rp. 75.700</td>
-		</tr>
-		<tr>
-			<td>7</td>
-			<td>ADBM1</td>
-			<td>1GB 5 hari</td>
-			<td>Rp. 9.100</td>
-		</tr>
-		<tr>
-			<td>8</td>
-			<td>ADBM2</td>
-			<td>2GB 7 hari</td>
-			<td>Rp. 16.350</td>
-		</tr>
-		<tr>
-			<td>9</td>
-			<td>ADBM3</td>
-			<td>3Gb 15 hari</td>
-			<td>Rp. 20.850</td>
-		</tr>
-		<tr>
-			<td>10</td>
-			<td>ADO2</td>
-			<td>Owsem 1GB allnet, 1GB (4G), 2GB (Games & Music) 30 hari</td>
-			<td>Rp. 21.600</td>
-		</tr>
-		<tr>
-			<td>11</td>
-			<td>ADO4</td>
-			<td>Owsem 1GB allnet, 3GB (4G), 4GB (Games & Music) 30 hari</td>
-			<td>Rp. 33.600</td>
-		</tr>
-		<tr>
-			<td>12</td>
-			<td>ADO8</td>
-			<td>Owsem 2GB allnet, 6GB (4G), 8GB (Games & Music) 30 hari</td>
-			<td>Rp. 53.200</td>
-		</tr>
-		<tr>
-			<td>13</td>
-			<td>ADO12</td>
-			<td>Owsem 3GB allnet, 9GB (4G), 12GB (Games & Music) 30 hari</td>
-			<td>Rp. 68.600</td>
-		</tr>
-		<tr>
-			<td>14</td>
-			<td>PCA</td>
-			<td>Paket chat WA dan Line</td>
-			<td>Rp. 15,600</td>
-		</tr>
-		<tr>
-			<td>15</td>
-			<td>PCSA</td>
-			<td>Paket chat + sosmed WA, Line, IG, FB, Twitter</td>
-			<td>Rp. 20.600</td>
-		</tr>
-		<tr>
-			<td>16</td>
-			<td>PSA</td>
-			<td>Paket sosmed Facebook, Twitter, dan Instagram</td>
-			<td>Rp. 15.600</td>
-		</tr>
-	</tbody>
-</table>
+  <table class="container">
+    <thead>
+      <tr>
+        <th>
+          <h1>No</h1>
+        </th>
+        <th>
+          <h1>Kode Produk</h1>
+        </th>
+        <th>
+          <h1>Keterangan Produk</h1>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>ADB1</td>
+        <td>Bronet 1GB 30 hari</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>ADB2</td>
+        <td>Bronet 2GB 30 hari</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>ADB3</td>
+        <td>Bronet 3GB 30 hari</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>ADB5</td>
+        <td>Bronet 5GB 30 hari</td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td>ADB7H</td>
+        <td>Bronet 300MB 7 hari</td>
+      </tr>
+      <tr>
+        <td>6</td>
+        <td>ADB8</td>
+        <td>Bronet 8GB 30 hari</td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>ADBM1</td>
+        <td>1GB 5 hari</td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td>ADBM2</td>
+        <td>2GB 7 hari</td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td>ADBM3</td>
+        <td>3Gb 15 hari</td>
+      </tr>
+      <tr>
+        <td>10</td>
+        <td>ADO2</td>
+        <td>Owsem 1GB allnet, 1GB (4G), 2GB (Games & Music) 30 hari</td>
+      </tr>
+      <tr>
+        <td>11</td>
+        <td>ADO4</td>
+        <td>Owsem 1GB allnet, 3GB (4G), 4GB (Games & Music) 30 hari</td>
+      </tr>
+      <tr>
+        <td>12</td>
+        <td>ADO8</td>
+        <td>Owsem 2GB allnet, 6GB (4G), 8GB (Games & Music) 30 hari</td>
+      </tr>
+      <tr>
+        <td>13</td>
+        <td>ADO12</td>
+        <td>Owsem 3GB allnet, 9GB (4G), 12GB (Games & Music) 30 hari</td>
+      </tr>
+      <tr>
+        <td>14</td>
+        <td>PCA</td>
+        <td>Paket chat WA dan Line</td>
+      </tr>
+      <tr>
+        <td>15</td>
+        <td>PCSA</td>
+        <td>Paket chat + sosmed WA, Line, IG, FB, Twitter</td>
+      </tr>
+      <tr>
+        <td>16</td>
+        <td>PSA</td>
+        <td>Paket sosmed Facebook, Twitter, dan Instagram</td>
+      </tr>
+    </tbody>
+  </table>
+</body>
 
 </html>
