--- a/indosat/indosat-internet.html
+++ b/indosat/indosat-internet.html
@@ -1,93 +1,232 @@
 <html>
+
 <head>
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Indo Pulsa | Indosat Internet</title>
 </head>
-<div class="navbar">
-	<a href="../index.html">Home</a>
-	<a href="../axis/axis-internet.html">Axis</a>
-	<div class="subnav">
-		<button class="subnavbtn">Indosat <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="#../indosat/indosat-internet.html">Paket Internet</a>
-			<a href="../indosat/indosat-sms.html">Paket SMS</a>
-			<a href="../indosat/indosat-telepon.html">Paket Telepon</a>
 
-		</div>
-	</div>
-	<a href="../smartfren/smartfren-internet.html">Smartfren</a>
-	<div class="subnav">
-		<button class="subnavbtn">Telkomsel <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../telkomsel/telkomsel-internet.html">Paket Internet</a>
-			<a href="../telkomsel/telkomsel-sms.html">Paket SMS</a>
-			<a href="../telkomsel/telkomsel-telepon.html">Paket Telepon</a>
-		</div>
-	</div>
-	<div class="subnav">
-		<button class="subnavbtn">Three <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../three/three-internet.html">Paket Internet</a>
-			<a href="../three/three-sms.html">Paket SMS</a>
-		</div>
-	</div>
-	<div class="subnav">
-		<button class="subnavbtn">XL <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../xl/xl-internet.html">Paket Internet</a>
-			<a href="../xl/xl-telepon.html">Paket Telepon</a>
-		</div>
-	</div>
-</div>
-<h1><span class="white">&lt;</span>Indo<span class="white">&gt;</span> <span class="white">Pulsa</pan></h1>
+<body>
+	<div class="navbar">
+		<a href="../index.html">Home</a>
+		<a href="../axis/axis-internet.html">Axis</a>
+		<div class="subnav">
+			<button class="subnavbtn">Indosat <i class="fa fa-caret-down"></i></button>
+			<div class="subnav-content">
+				<a href="#">Paket Internet</a>
+				<a href="../indosat/indosat-sms.html">Paket SMS</a>
+				<a href="../indosat/indosat-telepon.html">Paket Telepon</a>
 
-<table class="container">
-	<thead>
-		<tr>
-			<th>
-				<h1>Kode Produk</h1>
-			</th>
-			<th>
-				<h1>Keterangan Produk</h1>
-			</th>
-			<th>
-				<h1>Harga Produk</h1>
-			</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>Google</td>
-			<td>9518</td>
-			<td>6369</td>
-		</tr>
-		<tr>
-			<td>Twitter</td>
-			<td>7326</td>
-			<td>10437</td>
-		</tr>
-		<tr>
-			<td>Amazon</td>
-			<td>4162</td>
-			<td>5327</td>
-		</tr>
-		<tr>
-			<td>LinkedIn</td>
-			<td>3654</td>
-			<td>2961</td>
-		</tr>
-		<tr>
-			<td>CodePen</td>
-			<td>2002</td>
-			<td>4135</td>
-		</tr>
-		<tr>
-			<td>GitHub</td>
-			<td>4623</td>
-			<td>3486</td>
-		</tr>
-	</tbody>
-</table>
+			</div>
+		</div>
+		<a href="../smartfren/smartfren-internet.html">Smartfren</a>
+		<div class="subnav">
+			<button class="subnavbtn">Telkomsel <i class="fa fa-caret-down"></i></button>
+			<div class="subnav-content">
+				<a href="../telkomsel/telkomsel-internet.html">Paket Internet</a>
+				<a href="../telkomsel/telkomsel-sms.html">Paket SMS</a>
+				<a href="../telkomsel/telkomsel-telepon.html">Paket Telepon</a>
+			</div>
+		</div>
+			<a href="../three/three-internet.html">Three</a>
+		<div class="subnav">
+			<button class="subnavbtn">XL <i class="fa fa-caret-down"></i></button>
+			<div class="subnav-content">
+				<a href="../xl/xl-internet.html">Paket Internet</a>
+				<a href="../xl/xl-telepon.html">Paket Telepon</a>
+			</div>
+		</div>
+	</div>
+	<h1><span class="white">&lt;</span>Indo<span class="white">&gt;</span> <span class="white">Pulsa</pan>
+	</h1>
+
+	<table class="container">
+		<thead>
+			<tr>
+				<th>
+					<h1>No</h1>
+				</th>
+				<th>
+					<h1>Kode Produk</h1>
+				</th>
+				<th>
+					<h1>Keterangan Produk</h1>
+				</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>ID1</td>
+				<td>Freedom Unlimited 1GB+(4,5Gb Apps) 30Hari</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>ID2</td>
+				<td>Freedom Unlimited 2GB+(7,5Gb Apps) 30Hari</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>ID3</td>
+				<td>Freedom Unlimited 3GB+(15Gb Apps) 30Hari</td>
+			</tr>
+			<tr>
+				<td>4</td>
+				<td>ID7</td>
+				<td>Freedom Unlimited 7GB+(20Gb Apps) 30hari</td>
+			</tr>
+			<tr>
+				<td>5</td>
+				<td>ID10</td>
+				<td>Freedom Unlimited 10GB+(25Gb Apps) 30Hari</td>
+			</tr>
+			<tr>
+				<td>6</td>
+				<td>IDC1</td>
+				<td>Freedom M 12gb + Unlimited nelpon k sesama 30Hari</td>
+			</tr>
+			<tr>
+				<td>7</td>
+				<td>IDF2</td>
+				<td>Freedom Internet 2Gb 24jm (30Hari)</td>
+			</tr>
+			<tr>
+				<td>8</td>
+				<td>IDF3</td>
+				<td>Freedom Internet 4Gb 24jm (30Hari)</td>
+			</tr>
+			<tr>
+				<td>9</td>
+				<td>IDF8</td>
+				<td>8GB (perbulan 4Gb ) 60 hari</td>
+			</tr>
+			<tr>
+				<td>10</td>
+				<td>IDF10</td>
+				<td>Freedom Internet 10Gb 24jm (30Hari)</td>
+			</tr>
+			<tr>
+				<td>11</td>
+				<td>IDF12</td>
+				<td>12GB (perbulan 4Gb ) 90 hari</td>
+			</tr>
+			<tr>
+				<td>12</td>
+				<td>IDF18</td>
+				<td>Freedom Internet 18Gb 24jm (30Hari)</td>
+			</tr>
+			<tr>
+				<td>13</td>
+				<td>IDF20</td>
+				<td>20GB (perbulan 10Gb ) 60 hari</td>
+			</tr>
+			<tr>
+				<td>14</td>
+				<td>IDF25</td>
+				<td>Freedom Internet 25Gb 24jm (30Hari)</td>
+			</tr>
+			<tr>
+				<td>15</td>
+				<td>IDF30</td>
+				<td>30GB (perbulan 10Gb ) 90 hari</td>
+			</tr>
+			<tr>
+				<td>16</td>
+				<td>IDF36</td>
+				<td>36GB (perbulan 18Gb ) 60 hari</td>
+			</tr>
+			<tr>
+				<td>17</td>
+				<td>IDF54</td>
+				<td>54GB (perbulan 13,5Gb ) 90 hari</td>
+			</tr>
+			<tr>
+				<td>18</td>
+				<td>IDFH1</td>
+				<td>Freedom Internet 1,5Gb 24jm (5Hari)</td>
+			</tr>
+			<tr>
+				<td>19</td>
+				<td>IDFH4</td>
+				<td>Freedom Internet 4Gb 24jm (5Hari)</td>
+			</tr>
+			<tr>
+				<td>20</td>
+				<td>IDH7</td>
+				<td>1GB+(2Gb Apps) 7Hari</td>
+			</tr>
+			<tr>
+				<td>21</td>
+				<td>IDM1</td>
+				<td>Isat mini 1GB+(500MB Apps+1GB 01:06) 30HR</td>
+			</tr>
+			<tr>
+				<td>22</td>
+				<td>IDM2</td>
+				<td>Combo Vip 15GB All + 105B Youtube (30Hari)</td>
+			</tr>
+			<tr>
+				<td>23</td>
+				<td>IDY1H</td>
+				<td>1GB 24jm (1Hari)</td>
+			</tr>
+			<tr>
+				<td>24</td>
+				<td>IDY3H</td>
+				<td>1GB 24jm (3Hari)</td>
+			</tr>
+			<tr>
+				<td>25</td>
+				<td>IDY7H</td>
+				<td>1GB 24jm (7Hari)</td>
+			</tr>
+			<tr>
+				<td>26</td>
+				<td>IDY15H</td>
+				<td>1GB 24jm (15Hari)</td>
+			</tr>
+			<tr>
+				<td>27</td>
+				<td>IF4</td>
+				<td>Freedom Combo 4gb+Nelpon 5mnt 30hari</td>
+			</tr>
+			<tr>
+				<td>28</td>
+				<td>IF8</td>
+				<td>Freedom Combo 8gb+Nelpon 20mnt 30hari</td>
+			</tr>
+			<tr>
+				<td>29</td>
+				<td>IF14</td>
+				<td>Freedom Combo 14gb+Nelpon 30mnt 30hari</td>
+			</tr>
+			<tr>
+				<td>30</td>
+				<td>IF20</td>
+				<td>Freedom Combo 20gb+Nelpon 40mnt 30hari</td>
+			</tr>
+			<tr>
+				<td>31</td>
+				<td>IF30</td>
+				<td>Freedom Combo 30gb+Nelpon 60mnt 30hari</td>
+			</tr>
+			<tr>
+				<td>32</td>
+				<td>IH7</td>
+				<td>7Gb Harian(1Gb Perhari) Selama 7Hari</td>
+			</tr>
+			<tr>
+				<td>33</td>
+				<td>IH14</td>
+				<td>14Gb Harian(1Gb Perhari) Selama 14Hari</td>
+			</tr>
+			<tr>
+				<td>34</td>
+				<td>IH28</td>
+				<td>28Gb Harian(1Gb Perhari) Selama 28Hari</td>
+			</tr>
+		</tbody>
+	</table>
+</body>
 
 </html>
