--- a/index.html
+++ b/index.html
@@ -1,48 +1,52 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title>Indo Pulsa</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <title>IndoPulsa</title>
 </head>
-<div class="navbar">
-	<a href="#index.html">Home</a>
-	<a href="axis/axis-internet.html">Axis</a>
-	<div class="subnav">
-		<button class="subnavbtn">Indosat <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="indosat/indosat-internet.html">Paket Internet</a>
-			<a href="indosat/indosat-sms.html">Paket SMS</a>
-			<a href="indosat/indosat-telepon.html">Paket Telepon</a>
 
-		</div>
-	</div>
-		<a href="smartfren/smartfren-internet.html">Smartfren</a>
-	<div class="subnav">
-		<button class="subnavbtn">Telkomsel <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="telkomsel/telkomsel-internet.html">Paket Internet</a>
-			<a href="telkomsel/telkomsel-sms.html">Paket SMS</a>
-			<a href="telkomsel/telkomsel-telepon.html">Paket Telepon</a>
-		</div>
-	</div>
-	<div class="subnav">
-		<button class="subnavbtn">Three <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="three/three-internet.html">Paket Internet</a>
-			<a href="three/three-sms.html">Paket SMS</a>
-		</div>
-	</div>
-	<div class="subnav">
-		<button class="subnavbtn">XL <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="xl/xl-internet.html">Paket Internet</a>
-			<a href="xl/xl-telepon.html">Paket Telepon</a>
-		</div>
-	</div>
-</div>
-<h1><span class="white">&lt;</span>Indo<span class="white">&gt;</span> <span class="white">Pulsa</pan></h1>
-
-
+<body>
+  <div class="navbar">
+    <a href="#">Home</a>
+    <a href="axis/axis-internet.html">Axis</a>
+    <div class="subnav">
+      <button class="subnavbtn">
+        Indosat <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="subnav-content">
+        <a href="indosat/indosat-internet.html">Paket Internet</a>
+        <a href="indosat/indosat-sms.html">Paket SMS</a>
+        <a href="indosat/indosat-telepon.html">Paket Telepon</a>
+      </div>
+    </div>
+    <a href="smartfren/smartfren-internet.html">Smartfren</a>
+    <div class="subnav">
+      <button class="subnavbtn">
+        Telkomsel <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="subnav-content">
+        <a href="telkomsel/telkomsel-internet.html">Paket Internet</a>
+        <a href="telkomsel/telkomsel-sms.html">Paket SMS</a>
+        <a href="telkomsel/telkomsel-telepon.html">Paket Telepon</a>
+      </div>
+    </div>
+        <a href="three/three-internet.html">Three</a>
+    <div class="subnav">
+      <button class="subnavbtn">XL <i class="fa fa-caret-down"></i></button>
+      <div class="subnav-content">
+        <a href="xl/xl-internet.html">Paket Internet</a>
+        <a href="xl/xl-telepon.html">Paket Telepon</a>
+      </div>
+    </div>
+  </div>
+  <h1>
+    <span class="white">&lt;</span>Indo<span class="white">&gt;</span>
+    <span class="white">Pulsa</span>
+  </h1>
+  
+  
+</body>
 
 </html>
