--- a/smartfren/smartfren-internet.html
+++ b/smartfren/smartfren-internet.html
@@ -1,93 +1,91 @@
 <html>
+
 <head>
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Indo Pulsa | Smartfren Internet</title>
 </head>
-<div class="navbar">
-	<a href="../index.html">Home</a>
-	<a href="../axis/axis-internet.html">Axis</a>
-	<div class="subnav">
-		<button class="subnavbtn">Indosat <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../indosat/indosat-internet.html">Paket Internet</a>
-			<a href="../indosat/indosat-sms.html">Paket SMS</a>
-			<a href="../indosat/indosat-telepon.html">Paket Telepon</a>
 
+<body>
+	<div class="navbar">
+		<a href="../index.html">Home</a>
+		<a href="../axis/axis-internet.html">Axis</a>
+		<div class="subnav">
+			<button class="subnavbtn">Indosat <i class="fa fa-caret-down"></i></button>
+			<div class="subnav-content">
+				<a href="../indosat/indosat-internet.html">Paket Internet</a>
+				<a href="../indosat/indosat-sms.html">Paket SMS</a>
+				<a href="../indosat/indosat-telepon.html">Paket Telepon</a>
+			</div>
+		</div>
+		<a href="#">Smartfren</a>
+		<div class="subnav">
+			<button class="subnavbtn">Telkomsel <i class="fa fa-caret-down"></i></button>
+			<div class="subnav-content">
+				<a href="../telkomsel/telkomsel-internet.html">Paket Internet</a>
+				<a href="../telkomsel/telkomsel-sms.html">Paket SMS</a>
+				<a href="../telkomsel/telkomsel-telepon.html">Paket Telepon</a>
+			</div>
+		</div>
+			<a href="../three/three-internet.html">Three</a>
+		<div class="subnav">
+			<button class="subnavbtn">XL <i class="fa fa-caret-down"></i></button>
+			<div class="subnav-content">
+				<a href="../xl/xl-internet.html">Paket Internet</a>
+				<a href="../xl/xl-telepon.html">Paket Telepon</a>
+			</div>
 		</div>
 	</div>
-	<a href="#../smartfren/smartfren-internet.html">Smartfren</a>
-	<div class="subnav">
-		<button class="subnavbtn">Telkomsel <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../telkomsel/telkomsel-internet.html">Paket Internet</a>
-			<a href="../telkomsel/telkomsel-sms.html">Paket SMS</a>
-			<a href="../telkomsel/telkomsel-telepon.html">Paket Telepon</a>
-		</div>
-	</div>
-	<div class="subnav">
-		<button class="subnavbtn">Three <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../three/three-internet.html">Paket Internet</a>
-			<a href="../three/three-sms.html">Paket SMS</a>
-		</div>
-	</div>
-	<div class="subnav">
-		<button class="subnavbtn">XL <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../xl/xl-internet.html">Paket Internet</a>
-			<a href="../xl/xl-telepon.html">Paket Telepon</a>
-		</div>
-	</div>
-</div>
-<h1><span class="white">&lt;</span>Indo<span class="white">&gt;</span> <span class="white">Pulsa</pan></h1>
+	<h1><span class="white">&lt;</span>Indo<span class="white">&gt;</span> <span class="white">Pulsa</pan>
+	</h1>
 
-<table class="container">
-	<thead>
-		<tr>
-			<th>
-				<h1>Kode Produk</h1>
-			</th>
-			<th>
-				<h1>Keterangan Produk</h1>
-			</th>
-			<th>
-				<h1>Harga Produk</h1>
-			</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>Google</td>
-			<td>9518</td>
-			<td>6369</td>
-		</tr>
-		<tr>
-			<td>Twitter</td>
-			<td>7326</td>
-			<td>10437</td>
-		</tr>
-		<tr>
-			<td>Amazon</td>
-			<td>4162</td>
-			<td>5327</td>
-		</tr>
-		<tr>
-			<td>LinkedIn</td>
-			<td>3654</td>
-			<td>2961</td>
-		</tr>
-		<tr>
-			<td>CodePen</td>
-			<td>2002</td>
-			<td>4135</td>
-		</tr>
-		<tr>
-			<td>GitHub</td>
-			<td>4623</td>
-			<td>3486</td>
-		</tr>
-	</tbody>
-</table>
+	<table class="container">
+		<thead>
+			<tr>
+				<th>
+					<h1>No</h1>
+				</th>
+				<th>
+					<h1>Kode Produk</h1>
+				</th>
+				<th>
+					<h1>Keterangan Produk</h1>
+				</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>SFD10</td>
+				<td>1.25GB + 1.75GB(Kuota Malam 01:00 - 04:59 WIB) + Chat 7 Hari</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>SFD20</td>
+				<td>2GB + 2GB(Kuota Malam 01:00 - 04:59 WIB) + Chat 14 Hari</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>SFD30</td>
+				<td>4GB + 4GB(Kuota Malam 01:00 - 04:59 WIB) + Chat 14 Hari</td>
+			</tr>
+			<tr>
+				<td>4</td>
+				<td>SFD60</td>
+				<td>8GB + 8GB(Kuota Malam 01:00 - 04:59 WIB) + Chat 30 Hari</td>
+			</tr>
+			<tr>
+				<td>5</td>
+				<td>SFD100</td>
+				<td>20GB + 40GB(Kuota Malam 01:00 - 04:59 WIB) + HOOQ + Telp Sesama 30 Hari</td>
+			</tr>
+			<tr>
+				<td>6</td>
+				<td>SFDU65</td>
+				<td>Smart Data 4G Unlimited 28 Hari</td>
+			</tr>
+		</tbody>
+	</table>
+</body>
 
 </html>
