--- a/three/three-internet.html
+++ b/three/three-internet.html
@@ -1,93 +1,112 @@
 <html>
+
 <head>
 	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Indo Pulsa | Three Internet</title>
 </head>
-<div class="navbar">
-	<a href="../index.html">Home</a>
-	<a href="../axis/axis-internet.html">Axis</a>
-	<div class="subnav">
-		<button class="subnavbtn">Indosat <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../indosat/indosat-internet.html">Paket Internet</a>
-			<a href="../indosat/indosat-sms.html">Paket SMS</a>
-			<a href="../indosat/indosat-telepon.html">Paket Telepon</a>
 
+<body>
+	<div class="navbar">
+		<a href="../index.html">Home</a>
+		<a href="../axis/axis-internet.html">Axis</a>
+		<div class="subnav">
+			<button class="subnavbtn">Indosat <i class="fa fa-caret-down"></i></button>
+			<div class="subnav-content">
+				<a href="../indosat/indosat-internet.html">Paket Internet</a>
+				<a href="../indosat/indosat-sms.html">Paket SMS</a>
+				<a href="../indosat/indosat-telepon.html">Paket Telepon</a>
+
+			</div>
 		</div>
-	</div>
 		<a href="../smartfren/smartfren-internet.html">Smartfren</a>
-	<div class="subnav">
-		<button class="subnavbtn">Telkomsel <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../telkomsel/telkomsel-internet.html">Paket Internet</a>
-			<a href="../telkomsel/telkomsel-sms.html">Paket SMS</a>
-			<a href="../telkomsel/telkomsel-telepon.html">Paket Telepon</a>
+		<div class="subnav">
+			<button class="subnavbtn">Telkomsel <i class="fa fa-caret-down"></i></button>
+			<div class="subnav-content">
+				<a href="../telkomsel/telkomsel-internet.html">Paket Internet</a>
+				<a href="../telkomsel/telkomsel-sms.html">Paket SMS</a>
+				<a href="../telkomsel/telkomsel-telepon.html">Paket Telepon</a>
+			</div>
+		</div>
+				<a href="#">Three</a>
+		<div class="subnav">
+			<button class="subnavbtn">XL <i class="fa fa-caret-down"></i></button>
+			<div class="subnav-content">
+				<a href="../xl/xl-internet.html">Paket Internet</a>
+				<a href="../xl/xl-telepon.html">Paket Telepon</a>
+			</div>
 		</div>
 	</div>
-	<div class="subnav">
-		<button class="subnavbtn">Three <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="#../three/three-internet.html">Paket Internet</a>
-			<a href="../three/three-sms.html">Paket SMS</a>
-		</div>
-	</div>
-	<div class="subnav">
-		<button class="subnavbtn">XL <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../xl/xl-internet.html">Paket Internet</a>
-			<a href="../xl/xl-telepon.html">Paket Telepon</a>
-		</div>
-	</div>
-</div>
-<h1><span class="white">&lt;</span>Indo<span class="white">&gt;</span> <span class="white">Pulsa</pan></h1>
+	<h1><span class="white">&lt;</span>Indo<span class="white">&gt;</span> <span class="white">Pulsa</pan>
+	</h1>
 
-<table class="container">
-	<thead>
-		<tr>
-			<th>
-				<h1>Kode Produk</h1>
-			</th>
-			<th>
-				<h1>Keterangan Produk</h1>
-			</th>
-			<th>
-				<h1>Harga Produk</h1>
-			</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>Google</td>
-			<td>9518</td>
-			<td>6369</td>
-		</tr>
-		<tr>
-			<td>Twitter</td>
-			<td>7326</td>
-			<td>10437</td>
-		</tr>
-		<tr>
-			<td>Amazon</td>
-			<td>4162</td>
-			<td>5327</td>
-		</tr>
-		<tr>
-			<td>LinkedIn</td>
-			<td>3654</td>
-			<td>2961</td>
-		</tr>
-		<tr>
-			<td>CodePen</td>
-			<td>2002</td>
-			<td>4135</td>
-		</tr>
-		<tr>
-			<td>GitHub</td>
-			<td>4623</td>
-			<td>3486</td>
-		</tr>
-	</tbody>
-</table>
+	<table class="container">
+		<thead>
+			<tr>
+				<th>
+					<h1>No</h1>
+				</th>
+				<th>
+					<h1>Kode Produk</h1>
+				</th>
+				<th>
+					<h1>Keterangan Produk</h1>
+				</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>AM1</td>
+				<td>AON 1GB+Pulsa 2Rb(5Hari)</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>AM2</td>
+				<td>AON 1,5GB+Pulsa 2Rb(7Hari)</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>AON1</td>
+				<td>AON 1,5GB+pulsa 2Ribu(mengikuti masa aktif kartu)</td>
+			</tr>
+			<tr>
+				<td>4</td>
+				<td>AON2</td>
+				<td>AON 2GB+pulsa 2Ribu(mengikuti masa aktif kartu)</td>
+			</tr>
+			<tr>
+				<td>5</td>
+				<td>AON3</td>
+				<td>AON 3GB+pulsa 2Rb (mengikuti masa aktif kartu)</td>
+			</tr>
+			<tr>
+				<td>6</td>
+				<td>AON6</td>
+				<td>AON 6GB+Pulsa 2Rb  (mengikuti masa aktif kartu)</td>
+			</tr>
+			<tr>
+				<td>7</td>
+				<td>AU6</td>
+				<td>AON 6GB Unlimited 01-17 30Hari+Pulsa 2Rb</td>
+			</tr>
+			<tr>
+				<td>8</td>
+				<td>AU10</td>
+				<td>AON 10GB Unlimited 01-17 30Hari+Pulsa 2Rb</td>
+			</tr>
+			<tr>
+				<td>9</td>
+				<td>TDH1</td>
+				<td>31GB + 4GB 00-09 (3G/4G) 1hari</td>
+			</tr>
+			<tr>
+				<td>10</td>
+				<td>TDH2</td>
+				<td>750MB (3G/4G) + 2GBG 3hari</td>
+			</tr>
+		</tbody>
+	</table>
+</body>
 
 </html>
