--- a/xl/xl-internet.html
+++ b/xl/xl-internet.html
@@ -1,93 +1,137 @@
 <html>
+
 <head>
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Indo Pulsa | XL Internet</title>
 </head>
-<div class="navbar">
-	<a href="../index.html">Home</a>
-	<a href="../axis/axis-internet.html">Axis</a>
-	<div class="subnav">
-		<button class="subnavbtn">Indosat <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../indosat/indosat-internet.html">Paket Internet</a>
-			<a href="../indosat/indosat-sms.html">Paket SMS</a>
-			<a href="../indosat/indosat-telepon.html">Paket Telepon</a>
 
+<body>
+	<div class="navbar">
+		<a href="../index.html">Home</a>
+		<a href="../axis/axis-internet.html">Axis</a>
+		<div class="subnav">
+			<button class="subnavbtn">Indosat <i class="fa fa-caret-down"></i></button>
+			<div class="subnav-content">
+				<a href="../indosat/indosat-internet.html">Paket Internet</a>
+				<a href="../indosat/indosat-sms.html">Paket SMS</a>
+				<a href="../indosat/indosat-telepon.html">Paket Telepon</a>
+
+			</div>
 		</div>
-	</div>
 		<a href="../smartfren/smartfren-internet.html">Smartfren</a>
-	<div class="subnav">
-		<button class="subnavbtn">Telkomsel <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../telkomsel/telkomsel-internet.html">Paket Internet</a>
-			<a href="../telkomsel/telkomsel-sms.html">Paket SMS</a>
-			<a href="../telkomsel/telkomsel-telepon.html">Paket Telepon</a>
+		<div class="subnav">
+			<button class="subnavbtn">Telkomsel <i class="fa fa-caret-down"></i></button>
+			<div class="subnav-content">
+				<a href="../telkomsel/telkomsel-internet.html">Paket Internet</a>
+				<a href="../telkomsel/telkomsel-sms.html">Paket SMS</a>
+				<a href="../telkomsel/telkomsel-telepon.html">Paket Telepon</a>
+			</div>
+		</div>
+				<a href="../three/three-internet.html">Three</a>
+		<div class="subnav">
+			<button class="subnavbtn">XL <i class="fa fa-caret-down"></i></button>
+			<div class="subnav-content">
+				<a href="#">Paket Internet</a>
+				<a href="../xl/xl-telepon.html">Paket Telepon</a>
+			</div>
 		</div>
 	</div>
-	<div class="subnav">
-		<button class="subnavbtn">Three <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="../three/three-internet.html">Paket Internet</a>
-			<a href="../three/three-sms.html">Paket SMS</a>
-		</div>
-	</div>
-	<div class="subnav">
-		<button class="subnavbtn">XL <i class="fa fa-caret-down"></i></button>
-		<div class="subnav-content">
-			<a href="#../xl/xl-internet.html">Paket Internet</a>
-			<a href="../xl/xl-telepon.html">Paket Telepon</a>
-		</div>
-	</div>
-</div>
-<h1><span class="white">&lt;</span>Indo<span class="white">&gt;</span> <span class="white">Pulsa</pan></h1>
+	<h1><span class="white">&lt;</span>Indo<span class="white">&gt;</span> <span class="white">Pulsa</pan>
+	</h1>
 
-<table class="container">
-	<thead>
-		<tr>
-			<th>
-				<h1>Kode Produk</h1>
-			</th>
-			<th>
-				<h1>Keterangan Produk</h1>
-			</th>
-			<th>
-				<h1>Harga Produk</h1>
-			</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>Google</td>
-			<td>9518</td>
-			<td>6369</td>
-		</tr>
-		<tr>
-			<td>Twitter</td>
-			<td>7326</td>
-			<td>10437</td>
-		</tr>
-		<tr>
-			<td>Amazon</td>
-			<td>4162</td>
-			<td>5327</td>
-		</tr>
-		<tr>
-			<td>LinkedIn</td>
-			<td>3654</td>
-			<td>2961</td>
-		</tr>
-		<tr>
-			<td>CodePen</td>
-			<td>2002</td>
-			<td>4135</td>
-		</tr>
-		<tr>
-			<td>GitHub</td>
-			<td>4623</td>
-			<td>3486</td>
-		</tr>
-	</tbody>
-</table>
+	<table class="container">
+		<thead>
+			<tr>
+				<th>
+					<h1>No</h1>
+				</th>
+				<th>
+					<h1>Kode Produk</h1>
+				</th>
+				<th>
+					<h1>Keterangan Produk</h1>
+				</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>XDC10</td>
+				<td>5GB All + 5GB Youtube (30Hari)</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>XDC20</td>
+				<td>10GB All+ 10GB Youtube (30Hari)</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>XDC30</td>
+				<td>15GB All + 15GB Youtube (30Hari)</td>
+			</tr>
+			<tr>
+				<td>4</td>
+				<td>XDC40</td>
+				<td>20GB All + 20GB Youtube (30Hari)</td>
+			</tr>
+			<tr>
+				<td>5</td>
+				<td>XDC70</td>
+				<td>35GB All+ 35GB Youtube (30Hari)</td>
+			</tr>
+			<tr>
+				<td>6</td>
+				<td>XDCV20</td>
+				<td>Combo Vip 10GB All + 10GB Youtube (30Hari)</td>
+			</tr>
+			<tr>
+				<td>7</td>
+				<td>XDCV30</td>
+				<td>Combo Vip 15GB All + 105B Youtube (30Hari)</td>
+			</tr>
+			<tr>
+				<td>8</td>
+				<td>XDCV40</td>
+				<td>Combo Vip 20GB All + 20GB Youtube (30Hari)</td>
+			</tr>
+			<tr>
+				<td>9</td>
+				<td>XDH2</td>
+				<td>HotRod 1,5GB 24jam (30Hari)</td>
+			</tr>
+			<tr>
+				<td>10</td>
+				<td>XDH3</td>
+				<td>HotRod 3GB 24jam (30Hari)</td>
+			</tr>
+			<tr>
+				<td>11</td>
+				<td>XDH6</td>
+				<td>HotRod 6GB 24jam (30Hari)</td>
+			</tr>
+			<tr>
+				<td>12</td>
+				<td>XDH8</td>
+				<td>HotRod 8GB 24jam (30Hari)</td>
+			</tr>
+			<tr>
+				<td>13</td>
+				<td>XDP1</td>
+				<td>Pure 1GB 24jam (30Hari)</td>
+			</tr>
+			<tr>
+				<td>14</td>
+				<td>XDP2</td>
+				<td>Pure 2GB 24jam (30Hari)</td>
+			</tr>
+			<tr>
+				<td>15</td>
+				<td>XDP3</td>
+				<td>Pure 3GB 24jam (30Hari)</td>
+			</tr>
+		</tbody>
+	</table>
+</body>
 
 </html>
